Possible Fix for Login Overflow

--- a/src/app/login/styles.css
+++ b/src/app/login/styles.css
@@ -1,9 +1,8 @@
 section {
   position: relative;
-  width: 100%;
-  height: 96vh;
+  width: 100vw;
+  height: 100vh;
   background: #fabf1b;
-  /* background: #3586ff; */
   overflow: hidden;
 }
 section .air {
